--- a/dev/02_modélisation.ipynb
+++ b/dev/02_modélisation.ipynb
@@ -20,9 +20,11 @@
   {
    "source": [
     "Stratégie de cross validation : Il est important que la cross validation soit bien ficelée\n",
-    "- 1/ sort value sur timestamp\n",
+    "- 1/ sort_value ascending=true sur timestamp\n",
     "- 2/ Découpage en 5 morceaux\n",
-    "- 3/"
+    "- 3/ Premier CV sur les 2 premiers morceaux dans le temps\n",
+    "- 4/ Second CV sur les 3 premiers morceaux dans le temps\n",
+    "- 5/ Ainsi de suite jusqu'à la fin."
    ],
    "cell_type": "markdown",
    "metadata": {}
